Corrigindo path trusted

--- a/src/.env
+++ b/src/.env
@@ -2,6 +2,6 @@ URL=https://github.com/raizen-analytics/data-engineering-test/raw/master/assets/
 BRONZE_STAGE=../raw_data
 SILVER_STAGE=../processed_data
 GOLD_STAGE=../trusted_data
-EXCEL_CONF={"DPCache_m3": {"table_name": "sales_oil_derivative_fuels.parquet", "partitions":["product"]}, "DPCache_m3_2":{"table_name":"sales_diesel.parquet", "partitions":["product"]}}
+EXCEL_CONF={"DPCache_m3": {"table_name": "sales_oil_derivative_fuels", "partitions":["product"]}, "DPCache_m3_2":{"table_name":"sales_diesel", "partitions":["product"]}}
 EXCEL_FEATURES=["combustivel", "ano", "regiao", "estado"]
 EXCEL_VALUES=["jan","fev","mar","abr","mai","jun","jul","ago","set","out","nov","dez","total"]
